# legion

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGES.txt  CMakeLists.txt  Dockerfile  README.md  README.perf.md  README.test.md  VERSION  perf.py  test.py
apps/: CMakeLists.txt  Makefile.template
apps/cgsolver/: CMakeLists.txt  Makefile  README  cgmapper.hpp  cgoperators.hpp  cgsolver.cc  cgsolver.hpp  ell_sparsematrix.hpp  legionvector.hpp  mmio.cc  mmio.h  params.hpp  sparse.hpp  vectorio.hpp
apps/circuit/: CMakeLists.txt  Makefile  circuit.cc  circuit.h  circuit_cpu.cc  circuit_gpu.cc  circuit_gpu.cu  circuit_mapper.cc  circuit_mapper.h
apps/delaunay/: CMakeLists.txt  Makefile  delaunay.cc  delaunay.h
apps/kmeans/: CMakeLists.txt  Makefile  README  kmeans.cc  kmeans.h
apps/saxpy/: .gitignore  CMakeLists.txt  Makefile  saxpy.cc  saxpy_array.cc
bindings/python/: .gitignore  CMakeLists.txt  Makefile  canonical_python.cc  canonical_python.h  legion.py  legion_cffi.py  legion_cffi.py.in  legion_cffi_build.py  legion_info_build.py  legion_top.py  main.cc  projection_functor_example.c  projection_functor_example.py  pygion.py  redop.cc  redop.h  redop_config.h  setup.py
bindings/regent/: CMakeLists.txt  Makefile  README  bishop_c.cc  bishop_c.h  bishop_mapper.cc  bishop_mapper.h  legion_terra.cc  legion_terra.h  legion_terra_partitions.cc  legion_terra_partitions.h  murmur_hash3.cc  murmur_hash3.h  regent.cc  regent.h  regent_cuda.cu  regent_cudart_hijack.cc  regent_cudart_hijack.h  regent_gpu.cc  regent_gpu.h  regent_partitions.cc  regent_partitions.h  regent_partitions_cxx.h  regent_redop.h  regent_util.h
examples/: CMakeLists.txt  broadcasttest.cc
examples/00_hello_world/: CMakeLists.txt  Makefile  hello_world.cc
examples/01_tasks_and_futures/: CMakeLists.txt  Makefile  tasks_and_futures.cc
examples/02_index_tasks/: .gitignore  CMakeLists.txt  Makefile  index_tasks.cc
examples/03_global_vars/: .gitignore  CMakeLists.txt  Makefile  global_vars.cc
examples/04_logical_regions/: CMakeLists.txt  Makefile  logical_regions.cc
examples/05_physical_regions/: CMakeLists.txt  Makefile  physical_regions.cc
examples/05_physical_regions_and_accessors/: CMakeLists.txt  Makefile  physical_regions.cc
examples/06_privileges/: CMakeLists.txt  Makefile  privileges.cc
examples/07_partitioning/: .gitignore  CMakeLists.txt  Makefile  partitioning.cc
examples/08_multiple_partitions/: CMakeLists.txt  Makefile  multiple_partitions.cc
examples/09_custom_mapper/: CMakeLists.txt  custom_mapper.cc
examples/09_custom_mappers/: .gitignore  CMakeLists.txt  Makefile  custom_mapper.cc
examples/agency_interop/: CMakeLists.txt  Makefile  agency_interop.cc
examples/allreduce/: CMakeLists.txt  Makefile  allreduce.cc  disjoint_index_space_launch.cc  intra_task_ordering.cc
examples/attach-file/: CMakeLists.txt  Makefile  attach_file.cc  multiple_partitions.cc
examples/attach_2darray_c_fortran_layout/: .gitignore  CMakeLists.txt  Makefile  attach_2darray.cc
examples/attach_array_cpy/: attach_array.cc
examples/attach_array_daxpy/: CMakeLists.txt  Makefile  attach_array_daxpy.cc
examples/attach_array_no_cpy/: attach_array.cc
examples/attach_array_no_cpy_aos/: attach_array.cc
examples/attach_array_no_cpy_soa/: Makefile  attach_array.cc
examples/attach_file/: .gitignore  CMakeLists.txt  Makefile  attach_file.cc
examples/attach_index_space/: CMakeLists.txt  Makefile  index_space_attach.cc
examples/circuit/: .gitignore  CMakeLists.txt  Makefile  circuit.cc  circuit.h  circuit_cpu.cc  circuit_gpu.cpp  circuit_gpu.cu  circuit_init.cc  circuit_mapper.cc  circuit_mapper.h
examples/collective_writes/: CMakeLists.txt  Makefile  collective_writes.cc
examples/concurrent_tasks/: CMakeLists.txt  Makefile  concurrent.cc
examples/dependent_circuit/: .gitignore  CMakeLists.txt  Makefile  circuit.cc  circuit.h  circuit_cpu.cc  circuit_gpu.cu  circuit_mapper.cc  circuit_mapper.h
examples/dynamic_registration/: .gitignore  CMakeLists.txt  Makefile  dynamic_registration.cc
examples/fpga/: Makefile  README.md  fpga.cc
examples/full_circuit/: .gitignore  CMakeLists.txt  Makefile  circuit.cc  circuit.h  circuit_cpu.cc  circuit_gpu.cu  circuit_mapper.cc  circuit_mapper.h
examples/full_ghost/: .gitignore  CMakeLists.txt  Makefile  ghost.cc
examples/ghost/: .gitignore  (+3 more)
jupyter_notebook/: .gitignore  CMakeLists.txt  README.md  ci_test.py  install.py  install_jupyter.py  legion_kernel_nocr.py  legion_python.json  setup.py  test_canonical.py
realm/: .cmake-format  CMakeLists.txt  CMakePresets.json
runtime/: .gitignore  CMakeLists.txt  accessor.h  activemsg.cc  activemsg.h  alt_mappers.cc  alt_mappers.h  arrays.h  atomics.h  bitmask.h  channel.cc  channel.h  channel_disk.cc  channel_disk.h  common.h  complex.h  default_mapper.cc  default_mapper.h  field_tree.h  garbage_collection.cc  garbage_collection.h  half.h  interval_tree.h  layouts.h  legion.cc  legion.h  legion_allocation.h  legion_analysis.cc  legion_analysis.h  legion_c.cc  legion_c.h  legion_c_util.h  legion_config.h  legion_instances.h  legion_logging.cc  legion_logging.h  legion_ops.cc  legion_ops.h  legion_profiling.cc  legion_profiling.h  (+31 more)
test/: .gitignore  CMakeLists.txt
tools/: .gitignore  CMakeLists.txt  add_github_host_key.sh  check_github_issues.py  collate_messages.py  collate_runtime_errors.py  compute_gitlab_shortlist.py  cxx_defcheck  detect_loops.cc  dump_event_waiters.sh  fetch_github_issues.py  fetch_gitlab_pipelines.py  filter_backtraces.py  filter_mapper_logs.py  gen_dlmproxy.py  generate_defines.py  gitlab2docker.py  issues2csv.py  legion_gc.py  legion_prof.html.template  legion_prof.py  legion_prof2.py  legion_prof_copy.html.template  legion_prof_verify_subnodes.py  legion_serializer.py  legion_spy.py  legion_spy_dataflow.py  legion_util.py  mask_test.cc  mem_trace.c  mem_trace.py  normalize_mapper_logs.py  perf_chart.html  perf_chart.py  print_backtraces.sh  profile_diff.py  rprof_to_csv.py  run_with_backtraces.sh  spy_analysis.py  spy_parser.py  (+5 more)
tutorial/: CMakeLists.txt
(+4625 files in other folders)
